Refactor scoring policies to use lives parameter instead of ScoringContext